Yaml/webservice/nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 194453983284.dkr.ecr.ap-northeast-2.amazonaws.com/nginximage:latest
        volumeMounts:
        - name: persistent-storage
          mountPath: /static
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: efs-claim
